--- a/css/main.css
+++ b/css/main.css
@@ -233,6 +233,14 @@ blockquote p {
 	font-size: 1.9rem;
 	line-height: 1.737;
 }
+blockquote span {
+	font-family: georgia, serif;
+	font-style: italic;
+	padding: 0;
+	font-size: 1.9rem;
+	line-height: 1.737;
+	white-space: pre-line;
+}
 blockquote cite {
 	display: block;
 	font-size: 1.3rem;
@@ -1605,6 +1613,7 @@ header .logo a {
 	margin-left: -30px;
 }
 .intro-info img {
+/* .profile-pic img{ */
 	height: 9rem;
 	width: 9rem;
 	border-radius: 50%;
